# chronos-monorepo

./: .env.example  .gitignore  COMPREHENSIVE_TEST_SUMMARY.md  DEMO.md  Makefile  README.md  ROADMAP.md  TEST_EXECUTION_LOG.md  demo-script.sh  package.json  turbo.json
.claude/: settings.local.json
apps/web/: package.json  tailwind.config.ts  tsconfig.json
docs/: CLEAN_ARCHITECTURE.md  INDEX.md  MCP_SERVER_ENHANCEMENT_PLAN.md
docs/archive/: 2025-10-19_ARCHITECTURE.md  2025-10-21_FINAL_TEST_SUMMARY.md  2025-10-21_UPDATED_TEST_COVERAGE_REPORT.md  (+2 more)
services/: FINAL_V1_REPORT.md  TEST_COVERAGE_REPORT.md  V1_SESSION_SUMMARY.md  integration_test.sh
services/core/: CHANGELOG.md  CLEAN_ARCHITECTURE_REFACTORING.md  Cargo.toml  FEATURES.md  FINAL_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  PHASE3_PLAN.md  PHASE4A_SUMMARY.md  PHASE4B_SUMMARY.md  PHASE4_COMPLETE_SUMMARY.md  PHASE4_PLAN.md  PHASE5A_PROGRESS.md  PHASE5_PLAN.md  PHASE_1_COMPLETE.md  PHASE_1_PROGRESS_SUMMARY.md  PROMETHEUS_METRICS.md  README.md  SECURITY.md  SESSION_2_CONTINUATION_SUMMARY.md  SESSION_3_EVENT_REFACTORING_COMPLETE.md  SIERRADB_IMPLEMENTATION_PLAN.md  V1_COMPLETE.md  V1_ROADMAP.md  V1_STATUS.md  package.json  run-demo.sh
services/core/benches/: event_ingestion.rs  performance_benchmarks.rs
services/core/docs/: README.md
services/core/docs/archive/: 2025-10-20_METRICS_IMPLEMENTATION.md  2025-10-20_STATUS.md  2025-10-21_HONEST_V1_STATUS.md  2025-10-21_PERFORMANCE_REPORT.md
services/core/examples/: README.md  advanced_security_demo.rs
services/core/migrations/: 001_event_streams.sql  002_audit_events.sql  003_tenants.sql
services/core/src/: analytics.rs  api.rs  api_v1.rs  auth.rs  auth_api.rs  backup.rs  compaction.rs  config.rs  error.rs  event.rs  index.rs  lib.rs  main.rs  metrics.rs  middleware.rs  pipeline.rs  projection.rs  rate_limit.rs  replay.rs  schema.rs  security_integration_tests.rs  snapshot.rs  storage.rs  store.rs  tenant.rs  tenant_api.rs  wal.rs  websocket.rs
services/core/src/application/: mod.rs
services/core/src/application/dto/: event_dto.rs  mod.rs  projection_dto.rs  schema_dto.rs  tenant_dto.rs
services/core/src/application/services/: audit_logger.rs  mod.rs
services/core/src/application/use_cases/: ingest_event.rs  manage_projection.rs  manage_schema.rs  manage_tenant.rs  mod.rs  query_events.rs
services/core/src/domain/: mod.rs
services/core/src/domain/entities/: audit_event.rs  event.rs  event_stream.rs  mod.rs  projection.rs  schema.rs  tenant.rs
services/core/src/domain/repositories/: audit_event_repository.rs  event_repository.rs  event_stream_repository.rs  mod.rs  tenant_repository.rs
services/core/src/domain/value_objects/: entity_id.rs  event_type.rs  mod.rs  partition_key.rs  tenant_id.rs
services/core/src/infrastructure/: mod.rs
services/core/src/infrastructure/cluster/: mod.rs  node_registry.rs  request_router.rs
services/core/src/infrastructure/persistence/: mod.rs  performance.rs  storage_integrity.rs
services/core/src/infrastructure/persistence/lock_free/: metrics.rs  mod.rs  queue.rs
services/core/src/infrastructure/repositories/: in_memory_audit_repository.rs  in_memory_event_stream_repository.rs  in_memory_tenant_repository.rs  mod.rs  postgres_audit_repository.rs  postgres_event_stream_repository.rs  postgres_tenant_repository.rs  rocksdb_event_stream_repository.rs
services/core/src/infrastructure/security/: ip_filter.rs  mod.rs
services/core/src/security/: adaptive_rate_limit.rs  anomaly_detection.rs  automation.rs  encryption.rs  kms.rs  mod.rs
services/core/tests/: backup_tests.rs  config_tests.rs  integration_test_example.rs  integration_tests.rs  rate_limit_advanced_tests.rs
services/core/tests/stress_tests/: seven_day_stress.rs
(+99 files in other folders)
