[package]
name = "allsource-core"
version = "0.1.0"
edition = "2021"
authors = ["AllSource Team"]
description = "High-performance event store core built in Rust"

[lib]
name = "allsource_core"
path = "src/lib.rs"

[[bin]]
name = "allsource-core"
path = "src/main.rs"

[[bin]]
name = "allsource-admin"
path = "src/bin/allsource-admin.rs"

[dependencies]
# Arrow/Parquet for columnar storage
arrow = { version = "53.3", features = ["ipc", "json"] }
parquet = { version = "53.3", features = ["arrow", "async"] }
arrow-flight = "53.3"
datafusion = "43.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# High-performance data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-queue = "0.3"

# Compression
lz4 = "1.24"
flate2 = "1.0"

# Checksums
crc32fast = "1.4"
sha2 = "0.10"

# Metrics
prometheus = "0.13"

# Schema validation
jsonschema = "0.18"

# Authentication & Security (v1.0)
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
aes-gcm = "0.10"

# Database (Phase 4B-C)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"], optional = true }
rocksdb = { version = "0.22", optional = true }

[features]
default = []
postgres = ["sqlx"]
rocksdb-storage = ["rocksdb"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
ctrlc = "3.4"

[[bench]]
name = "performance_benchmarks"
harness = false

[[test]]
name = "seven_day_stress"
path = "tests/stress_tests/seven_day_stress.rs"
harness = true

[[example]]
name = "advanced_security_demo"
path = "examples/advanced_security_demo.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
